Fix margin top spacing for collection product tiles

--- a/src/styles/embeds/sass/components/select.css
+++ b/src/styles/embeds/sass/components/select.css
@@ -23,7 +23,7 @@
 }
 
 .shopify-buy__option-select {
-  & + & {
+  & + .shopify-buy__option-select {
     margin-top: calc(var(--gutter) / 2);
   }
 }
